--- a/src/scss/base/_styles.scss
+++ b/src/scss/base/_styles.scss
@@ -1,46 +1,44 @@
-/* Fichier colors.scss */
+:root {
+  /* default */
+  /* colors */
+  --neutral-black: #000000;
+  --neutral-black-light: #555555;
+  --neutral-white: #ffffff;
+  --primary-brown: #573c2f;
+  --primary-brown-light: #8f7d74;
+  --primary-red: #ea6752;
+  --primary-red-light: #f19a8c;
+  --primary-yellow: #fecf44;
+  --primary-yellow-light: #fedf82;
 
-/* default */
-/* colors */
-$neutral-black: #000000;
-$neutral-black-light: #555555;
-$neutral-white: #ffffff;
-$primary-brown: #573c2f;
-$primary-brown-light: #8f7d74;
-$primary-red: #ea6752;
-$primary-red-light: #f19a8c;
-$primary-yellow: #fecf44;
-$primary-yellow-light: #fedf82;
+  --hover-btn-bg: var(--primary-red-light);
+  --hover-btn-fg: var(--neutral-white);
 
-/* light */
-/* colors */
-$hover-btn-bg: $primary-red-light;
-$hover-btn-fg: $neutral-white;
+  --primary-btn-bg: var(--primary-red);
+  --primary-btn-fg: var(--neutral-white);
 
-$primary-btn-bg: $primary-red;
-$primary-btn-fg: $neutral-white;
+  --secondary-btn-bg: var(--neutral-white);
+  --secondary-btn-fg: var(--primary-brown);
 
-$secondary-btn-bg: $neutral-white;
-$secondary-btn-fg: $primary-brown;
+  --bag-btn-bg: var(--primary-red);
+  --bag-btn-fg: var(--neutral-white);
 
-$bag-btn-bg: $primary-red;
-$bag-btn-fg: $neutral-white;
+  --bag-hover-btn-bg: var(--neutral-white);
+  --bag-hover-btn-fg: var(--primary-red);
 
-$bag-hover-btn-bg: $neutral-white;
-$bag-hover-btn-fg: $primary-red;
+  --card-color-bg: var(--neutral-white);
+  --card-color-fg: var(--primary-brown);
 
-$card-color-bg: $neutral-white;
-$card-color-fg: $primary-brown;
+  --icon-primary: var(--neutral-white);
+  --icon-secondary: var(--primary-brown);
 
-$icon-primary: $neutral-white;
-$icon-secondary: $primary-brown;
+  --label-primary-bg: var(--primary-red-light);
+  --label-primary-fg: var(--neutral-white);
+  --label-primary-stroke: var(--primary-red);
 
-$label-primary-bg: $primary-red-light;
-$label-primary-fg: $neutral-white;
-$label-primary-stroke: $primary-red;
-
-$nav-bg-primary: $neutral-white;
-$nav-bg-secondary: $primary-yellow-light;
+  --nav-bg-primary: var(--neutral-white);
+  --nav-bg-secondary: var(--primary-yellow-light);
+}
 
 @mixin font-title-bold {
   // title/bold //
