--- a/src/scss/base/_styles.scss
+++ b/src/scss/base/_styles.scss
@@ -90,7 +90,7 @@
   letter-spacing: normal;
 }
 
-@mixin font-btn-medium {
+@mixin font-texte-16px {
   // btn/medium //
   font-family: "Lexend Deca";
   font-weight: 500;
@@ -100,7 +100,7 @@
   letter-spacing: normal;
 }
 
-@mixin font-texte-medium {
+@mixin font-texte-14px {
   // texte/medium //
   font-family: "Lexend Deca";
   font-weight: 500;
