--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,4 +1,6 @@
-
-@forward 'button';
-@forward 'nav';
-@forward 'header';
+@forward "button";
+@forward "label";
+@forward "toggle";
+@forward "compteur";
+@forward "nav";
+@forward "header";
