--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,19 +1,20 @@
-@use "../base/_styles" as*;
+@use "../base/_styles" as *;
 .nav {
-display: flex;
-justify-content: center;
+  display: flex;
+  justify-content: center;
 
-&__bar{
+  &__bar {
     display: flex;
+    flex-wrap: wrap;
     width: 82.875rem;
     padding: 1.25rem 3.125rem;
     justify-content: center;
     align-items: center;
     gap: 1.25rem;
     border-radius: 0.9375rem;
-    background:var(--nav-bg-secondary);
-}
-
-
-
+    background: var(--nav-bg-secondary);
+    @media (min-width: 768px) {
+      flex-wrap: nowrap;
+    }
+  }
 }
