--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,16 +1,34 @@
 @use "../base/_styles" as*;
 
 .header {
-    display: flex;
-    justify-content: center;
 
-    &__content {
+
+    &__section {
         display: flex;
-        width: 86.125rem;
-        height: 5.3125rem;
+        margin-left: 1.25rem;
+        margin-top: 1.25;
+        justify-content: space-between;
+        align-items: center;
+        background: var(--nav-bg-primary);
+
+    }
+
+    &__div1 {
+        display: flex;
+        padding: 1.25rem;
+        align-items: center;
+        gap: 2.5rem;
+    }
+
+    &__div2 {
+        display: flex;
+        width: 20.15625rem;
         justify-content: center;
         align-items: center;
+        gap: 3.75rem;
         flex-shrink: 0;
-        background-color: var(--nav-bg-primary);
+        align-self: stretch;
+
     }
+
 }
