--- a/src/scss/components/_compteur.scss
+++ b/src/scss/components/_compteur.scss
@@ -7,6 +7,12 @@
   align-items: center;
   gap: 0.625rem;
   border-radius: 0.9375rem;
-  border: 3px solid var(--label-primary-stroke);
-  background: var(--label-primary-bg);
+  border: 3px solid var(--conteur-primary-stroke);
+  background: var(--conteur-primary-bg);
+  color: var(--conteur-primary-fg);
+}
+.btn-panier__icon {
+  display: flex;
+  align-items: center;
+  fill: var(--conteur-primary-fg);
 }
