--- a/src/scss/base/_styles.scss
+++ b/src/scss/base/_styles.scss
@@ -74,7 +74,7 @@
   letter-spacing: normal;
 }
 
-@mixin font-title-medium {
+@mixin font-texte-22px {
   // title/medium //
   font-family: "Lexend Deca";
   font-weight: 500;
