--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -43,7 +43,7 @@
     gap: 0.625rem;
   }
 
-  .info__img {
+  .img-card {
     width: 6.875rem;
     height: 6.875rem;
     border-radius: 0.5625rem;
