--- a/src/scss/components/_card-panier.scss
+++ b/src/scss/components/_card-panier.scss
@@ -1,18 +1,22 @@
 @use "../base/_styles" as *;
 
-.card {
-  display: inline-flex;
+body {
+  background: red;
+}
+
+.card-panier {
+  display: flex;
+  width: min-content;
   padding: 0.625rem;
   flex-direction: column;
-  gap: 0.625rem;
+  align-items: flex-start;
   border-radius: 0.5775rem;
   background-color: var(--card-color-bg);
 
   @media (min-width: 768px) {
-    padding: none;
-    border-radius: 0.9375rem;
-    align-items: center;
-    gap: 1.875rem;
+    display: flex;
+    width: max-content;
+    padding-right: 2rem;
   }
 
   &__name {
@@ -23,65 +27,93 @@
       @include font-texte-16px;
     }
   }
-  &__delete {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
 
-  &__info {
+  .info-panier {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    gap: 0.625rem;
+    gap: 1rem;
 
     @media (min-width: 768px) {
-      flex-direction: column;
-      gap: 1.875rem;
+      display: flex;
     }
-  }
 
-  .info__interaction {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.625rem;
-  }
+    &__div1 {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
 
-  .info__img {
-    width: 6.875rem;
-    height: 6.875rem;
-    border-radius: 0.5625rem;
-    flex-shrink: 0;
+      @media (min-width: 768px) {
+        justify-content: space-between;
+        gap: 1rem;
+      }
+    }
+    &__div2 {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
 
-    @media (min-width: 768px) {
-      width: 23.4375rem;
-      height: 23.4375rem;
+      @media (min-width: 768px) {
+        justify-content: space-between;
+        flex-direction: row;
+        gap: 1rem;
+      }
+    }
+
+    &__interaction {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+
+      @media (min-width: 768px) {
+        padding-left: 1rem;
+        flex-direction: row-reverse;
+        gap: 2rem;
+      }
+    }
+
+    &__img {
+      width: 6.875rem;
+      height: 6.875rem;
+      border-radius: 0.5625rem;
+      flex-shrink: 0;
     }
   }
 }
 
 .desktop {
-  display: none; // Masquez le bouton "Voir produit" par défaut
+  display: none; // Hide the "Voir produit" button by default
 
   @media (min-width: 768px) {
-    display: flex; // Masquez le bouton "Ajouter au panier" en mode desktop
+    display: flex; // Hide the "Ajouter au panier" button in desktop mode
   }
 }
 
 .mobile {
-  display: flex; // Affichez le bouton "Ajouter au panier" par défaut en mode mobile
+  display: flex; // Show the "Ajouter au panier" button by default in mobile mode
 
   @media (min-width: 768px) {
-    display: none; // Masquez le bouton "Ajouter au panier" en mode desktop
+    display: none; // Hide the "Ajouter au panier" button in desktop mode
   }
 }
-.info_illsutration {
+
+.info_illustration {
   position: relative;
 }
+
 .btn-panier {
   position: absolute;
   top: 10px;
   right: 10px;
+}
+
+.toggle {
+  flex-direction: row;
+
+  @media (min-width: 768px) {
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
