--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -2,7 +2,8 @@
 @forward "label";
 @forward "toggle";
 @forward "compteur";
-@forward "nav";
+@forward "nav1";
+@forward "nav2";
 @forward "header";
 @forward "card";
 @forward "card-panier";
