--- a/src/scss/components/_formulaire.scss
+++ b/src/scss/components/_formulaire.scss
@@ -5,38 +5,34 @@
     &__box {
         border: 2px solid var(--primary-red);
         background: var(--primary-red-light);
-    
+
     }
 
     &__txt {
         color: var(--primary-brown);
         font-family: Lexend Deca;
+        font-size: 1.375rem;
+
+        @media (max-width:765px) {
+            font-size: 0.875rem;
+            font-weight: 500;
+        }
+
+    }
 
 }
 
-}
 
 
-//     font-size: 1.375rem;
-//     font-style: normal;
-//     font-weight: 500;
-//     line-height: normal;
-
-//     @media (max-width:765px) {
-//         color: var(--primary-brown);
-//         font-family: Lexend Deca;
-//         font-size: 0.875rem;
-//         font-style: normal;
-//         font-weight: 500;
-//         line-height: normal;
-//     }
-// }
-
-
-.large {
+.box__large {
     width: 34.9375rem;
     height: 2.75rem;
     border-radius: 6.25rem;
+
+    @media (max-width:765px) {
+        width: 19.3125rem;
+        height: 1.375rem;
+    }
 
 }
 
@@ -52,4 +48,6 @@
         height: 1.375rem;
     }
 
-};
+}
+
+;
