--- a/src/scss/components/_profil.scss
+++ b/src/scss/components/_profil.scss
@@ -6,9 +6,14 @@
     align-items: center;
     gap: 1rem;
     padding: 2rem;
+    background-color: var(--neutral-white);
+    width: 35rem;
+    border-radius: 15px;
 
     @media (max-width: 765px) {
         flex-direction: column;
+        width: 23.4375rem;
+        height: 20.375rem;
     }
 
     &__img {
@@ -34,8 +39,8 @@
     }
 
     &__txt {
-        color: var(--neutral-white);
-        font-family : Lexend Deca;
+        color: var(--neutral-black);
+        font-family: Lexend Deca;
     }
 
 
