--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,3 +2,5 @@
 @use "components";
 
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
