--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -14,6 +14,8 @@
 @forward "historique";
 @forward "commandeencours";
 @forward "overlay";
+@forward "paiement";
+@forward "btn_bestseller";
 @forward "titrage";
 @forward "btnépuisé";
 @forward "espacepanier";
