--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,6 @@
 @use "../base/_styles" as *;
 
+
 .header {
   &__section {
     display: flex;
@@ -8,7 +9,15 @@
     align-items: center;
     background: var(--nav-bg-primary);
     padding: 0rem 2rem 0rem 2rem;
+
+    
   }
+
+  &__label {
+    cursor: pointer;
+    z-index: 100;
+  }
+  
 
   &__logo {
     max-width: 15rem;
@@ -24,8 +33,18 @@
     align-items: center;
     gap: 2.5rem;
 
+    
     @media (max-width: 765px) {
-      display: none;
+      width: 50;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: white;
+      position: fixed;
+      inset: 0 0 0 50%;
+      translate: -200% 0;
+      transition: all 0.3s ease-in-out;
     }
   }
 
@@ -46,15 +65,59 @@
     }
   }
 
-  &__loc {
-    @media (max-width: 765px) {
-      display: none;
-    }
-  }
-
   &__bag {
     @media (max-width:765px) {
       width: 1.5rem;
     }
   }
 }
+
+
+.menuburgerClose, .iconX {
+  display: none;
+
+  @media (max-width:765px) {
+    display: none;
+  }
+}
+
+input[type="checkbox"]:checked ~ .header__div1 {
+  translate: -100%;
+
+}
+
+.hidden-checkbox {
+  display: none;
+}
+
+
+.unchecked {
+  fill: currentColor;
+  // display: none;
+  @media (min-width:765px) {
+    display: none;
+  }
+
+}
+
+.checked {
+  fill: currentColor;
+  display: none;
+}
+
+.hidden-checkbox:checked + .header__label .unchecked {
+  display: none;
+}
+
+.hidden-checkbox:checked + .header__label .checked {
+  display:flex
+}
+
+// input[type="checkbox"]:checked + .header__label .iconMenu {
+//   display: none;
+// }
+
+// input[type="checkbox"]:checked + .header__label .iconX {
+//   display: inline-block;
+// }
+
